--- a/src/App.scss
+++ b/src/App.scss
@@ -1,7 +1,15 @@
+@import "../src/common/colors.scss";
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
 a {
   text-decoration: none;
 }
 
-.active {
-  color: red;
+body {
+  background: $primary-color;
 }
